History of feedfeeder
=====================

2.0.4 (unreleased)
------------------

- Do not reindex the feed item when nothing has changed.  Only update
  the objectInfo field when there has been a change.
  Fixes http://plone.org/products/feedfeeder/issues/34
  [maurits]


2.0.3 (2011-01-17)
------------------

- Respect the Plone setting on the 'about' information: only show the
  document byline if the user is logged in or anonymous users are
  allowed to view the about information.
  [markvl]


2.0.2 (2010-12-17)
------------------

- Modified import RSS and added a new field on feed items named 
  objectInfo. All feed data will be stored on this field, 
  as a python dict.
  Just changing the remote RSS template, you will able to memoize 
  additional info without having to modify the feed item schema.
  [dmoro]

- Added an option on feed folder that let you choose to redirect 
  automatically to remote resources. If you have modify permissions 
  on feed items there will not be any redirect
  [dmoro]

- Added new tests
  [sithmel]


2.0.1 (2010-11-26)
------------------

- Added @@feed-mega-update view so you can update all feed folders at
  once, for example in a clock server.
  [miohtoma]

- Import HTMLParseError from the standard python HTMLParser instead of
  BeautifulSoup.  This makes feedfeeder compatible with BeautifulSoup
  3.0.x again.
  [maurits]


2.0 (2010-07-05)
----------------

- Solve some Plone 4 compatibility issues.
  [sureshvv]

- Ignore unidentifiable entries without id or link, instead of
  throwing an AttributeError.
  Fixes http://plone.org/products/feedfeeder/issues/26
  [maurits]


1.0.1 (2010-04-02)
------------------

- Fix errors when viewing a folder or item on Plone 4, while still
  keeping Plone 2.5 and Plone 3 compatibility.
  Refs http://plone.org/products/feedfeeder/issues/25
  [maurits]


1.0 (2009-12-23)
----------------

- Some summaries are a snippet from the full content, and then they