@@ -4,6 +4,10 @@ History of feedfeeder
 2.0.4 (unreleased)
 ------------------
 
+- Avoid DeprecationWarning on python2.6 by preferring hashlib over md5
+  when available.
+  [maurits]
+
 - Do not reindex the feed item when nothing has changed.  Only update
   the objectInfo field when there has been a change.
   Fixes http://plone.org/products/feedfeeder/issues/34
